# kiro.rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.md.test  build.sh  config.example.json  config.local.json  deploy.sh  dev.ps1  docker-compose.yaml  docker-compose.yml  hashed-wandering-moler.md  package-lock.json  publish.ps1
.github/: docker-build.yaml
.github/workflows/: build.yaml  docker-build.yaml  test-trigger.yaml
admin-ui/: package-lock.json  package.json  pnpm-lock.yaml
admin-ui/src/: App.tsx
backend/: Cargo.toml
backend/src/: db.rs  http_client.rs  main.rs  test.rs  token.rs
config/: config.json  credentials.json
deploy/: kiro-rs.service
docs/: MAINTENANCE.md  admin-features-spec.md
docs/plans/: 2026-04-18-kiro-endpoint-layered-refactor-plan.md  2026-04-25-backend-refactor-plan.md  2026-04-26-refactor-v2-fixes-plan.md  2026-04-26-refactor-v2-fixes-research.md  2026-04-28-ratelimit-pr140-codebase.md  2026-04-28-ratelimit-pr140-external.md  2026-04-28-ratelimit-pr140-pr-analysis.md  2026-04-28-ratelimit-pr140-research.md
frontend/: README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: deploy-proxy-stack.sh  rebuild-and-restart.sh  wait-for-goproxy.sh
src/: http_client.rs  import.rs  main.rs  monitoring.rs  notification.rs  token.rs  webhook.rs
src/admin/: auth_handlers.rs  captcha.rs  email.rs  error.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  proxy_pool.rs  proxy_pool_handlers.rs  router.rs  (+2 more)
tools/: verify-local-windows.ps1
(+152 files in other folders)
