[package]
name = "kiro-rs"
version = "2026.2.6"
edition = "2024"

[profile.dev]
codegen-units = 256  # 最大化并行编译
split-debuginfo = "unpacked"  # macOS 加速
opt-level = 0  # 开发时不优化

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "socks", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"           # CRC32C 计算
bytes = "1"         # 高效的字节缓冲区
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"  # 高性能同步原语
subtle = "2.6"        # 常量时间比较（防止时序攻击）
rust-embed = "8"      # 嵌入静态文件
mime_guess = "2"      # MIME 类型推断
captcha = "1.0"       # CAPTCHA 图片生成
base64 = "0.22"       # Base64 编码
jsonwebtoken = "9"    # JWT token 生成和验证
